body overflow hidden um Navbar Probleme zu fixen

--- a/src/css/components/_buttons.scss
+++ b/src/css/components/_buttons.scss
@@ -4,7 +4,7 @@
     cursor: pointer;
     display: inline-block;
     text-decoration: none;
-    position: relative;
+    //position: relative;
     color: $color-white;
     font-weight: 400;
     font-style: normal;
