--- a/src/css/layout/_navbar.scss
+++ b/src/css/layout/_navbar.scss
@@ -49,7 +49,6 @@
   }
 
   &__mobilnav {
-    background-color: crimson;
     height: 100vw;
     width: 0;
 
